# eth_classifier

./: Cargo.toml  Makefile  README.md  classify_all.py  train.py
src/: etherscan.rs  exchange_list.rs  main.rs  scrape.rs  wallet_classifier.rs
