[package]
name = "wallet_classifier"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
csv = "1.3.1"
futures = "0.3.31"
indicatif = "0.18.0"
ndarray = "0.16.1"
pyo3 = { version = "0.26.0", features = ["auto-initialize"] }
reqwest = "0.12.23"
serde_json = "1.0.143"
tch = "0.20.0"
tokio = { version = "1.47.1", features = ["full"] }
